--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,15 @@
+/* root ctyling */
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/* styles body element */
 body {
     background-color: #d9dcd6;
 }
-
+/* styles header element */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -54,7 +56,8 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    /* added correct jpg formatting */
+    background-image: url("../images/digital-marketing-meeting.jpg"); 
     background-size: cover;
     background-position: center;
 }
